Added new feature and fixed bugs

--- a/popup.html
+++ b/popup.html
@@ -54,7 +54,7 @@
           id="set-primary-id-btn"
           class="btn bg-black text-white rounded-md px-2 py-1 shadow-md"
         >
-          Fetch
+          Fetch!
         </button>
       </div>
       <div class="dependents-container">
