Added new feature and fixed bugs

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,9 @@
       <span>Total Pax: </span><span id="primary-user-qty-span"></span>
     </div>
     <br />
-    <select id="userSelect"></select>
+    <select id="userSelect">
+      <option value="NA">Select</option>
+    </select>
     <div
       class="primary-dependent-container mt-5"
       style="
@@ -192,7 +194,7 @@
         <input
           type="number"
           id="delay-input"
-          value="10"
+          value="8"
           class="shadow-md border border-black outline-none px-2 py-1 rounded-sm"
         />
       </div>
